Initial state of line graph.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <h1>
   {{title}}
 </h1>
-<app-scatter-plot-cmp></app-scatter-plot-cmp>
+<!-- <app-scatter-plot></app-scatter-plot> -->
+<line-graph></line-graph>
